linter:webhint linter issues fixed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red mr-2"></i><span
           class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
-      <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol"><span class="sr-only">Toggle
+      <button type="button" data-toggle="collapse" class="navbar-toggler" data-target="#navcol"><span
+          class="sr-only">Toggle
           navigation</span><i class="fa fa-bars red"></i></button>
       <!-- collapsible nav bar- expand from md screen -->
       <div class="collapse navbar-collapse justify-content-between" id="navcol">
@@ -44,8 +45,8 @@
                 class="grey">PURCHASE LIST</span></a>
           </li>
         </ul>
-        <button class="py-1 mt-3 px-5 px-md-2 px-lg-5 py-lg-2 m-0 ml-lg-4 my-sm-2 rounded border-0 bg-red text-light"
-          type="button">POST
+        <button type="button"
+          class="py-1 mt-3 px-5 px-md-2 px-lg-5 py-lg-2 m-0 ml-lg-4 my-sm-2 rounded border-0 bg-red text-light">POST
           AN
           AD</button>
         <!-- navbar end items -->
@@ -68,7 +69,7 @@
   <main class="container-fluid p-0">
     <!-- top category info -->
     <div class="jumbotron mt-5 p-3 p-lg-3 mb-0 text-center">
-      <h1 class="text-light">ZATTIX</h1>
+      <h1 class="text-light mt-lg-5">ZATTIX</h1>
       <p class="text-light">Buying and Selling could not be simpler than this</p>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center px-2 px-md-3 p-lg-0">
         <input type="search" placeholder="What are you searching for ?"
@@ -103,7 +104,7 @@
                 </p>
 
                 <p class="check">Check out our awesome piano collection</p>
-                <button class="button">Explore</button>
+                <button type="button" class="button">Explore</button>
               </div>
             </div>
           </div>
@@ -124,7 +125,7 @@
                 </p>
 
                 <p class="check">Check out our awesome violin collection</p>
-                <button class="button">Explore</button>
+                <button type="button" class="button">Explore</button>
               </div>
             </div>
           </div>
@@ -144,7 +145,7 @@
                 </p>
 
                 <p class="check"> Check out our awesome drums collection</p>
-                <button class="button">Explore</button>
+                <button type="button" class="button">Explore</button>
               </div>
             </div>
           </div>
