pagination:pagination element of index to search page

--- a/search.html
+++ b/search.html
@@ -58,7 +58,7 @@
             <a href="#">
               <span class="navbar-text text-light">Sam
               </span>
-            </a>
+            </a>fmain-sear
             <a href="#"><i class="fa fa-envelope align-self-center text-light mx-2"></i></a>
             <!-- my picture as user -->
           </div>
@@ -322,12 +322,21 @@
               </div>
             </div>
           </div>
-
-
         </div>
 
       </div>
     </div>
+    <!-- pagination from bootstrap -->
+
+    <nav aria-label="Page navigation" class="my-3">
+      <ul class="pagination py-4 justify-content-center">
+        <li class="page-item"><a class="page-link font-weight-bold" href="#">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link font-weight-bold" href="#">Next</a></li>
+      </ul>
+    </nav>
   </main>
   <footer class="container-fluid pt-3 px-0">
     <div class="row mx-0 row-cols-1 row-cols-md-3 justify-content-between">
