search:made queries clickable links with a tags

--- a/index.html
+++ b/index.html
@@ -405,25 +405,24 @@
           <h5 class="font-weight-bold red text-center">QUICK LINKS</h5>
           <nav>
             <ul class="d-grid g-c-8 footer-nav-ul">
-              <li class="btn-link text-light">HOME</li>
-              <li class="btn-link text-light">CART</li>
-              <li class="btn-link text-light">MY ACCOUNT</li>
-              <li class="btn-link text-light">ORDERS</li>
-              <li class="btn-link text-light">FAVOURITES</li>
-              <li class="btn-link text-light">CONTACT US</li>
-              <li class="btn-link text-light">FAQ</li>
-              <li class="btn-link text-light">LICENSE</li>
+              <li class="btn-link"><a href="#" class="text-light">HOME</a></li>
+              <li class="btn-link"><a href="#" class="text-light">CART</a></li>
+              <li class="btn-link"><a href="#" class="text-light">MY ACCOUNT</a></li>
+              <li class="btn-link"><a href="#" class="text-light">ORDERS</a></li>
+              <li class="btn-link"><a href="#" class="text-light">FAVOURITES</a></li>
+              <li class="btn-link"><a href="#" class="text-light">CONTACT US</a></li>
+              <li class="btn-link"><a href="#" class="text-light">FAQ</a></li>
+              <li class="btn-link"><a href="#" class="text-light">LICENSE</a></li>
             </ul>
           </nav>
         </div>
         <div>
-          <h5 class="font-weight-bold red text-center">Reach out to us</h5>
-          <ul class="d-flex justify-content-center">
-            <li><i class="px-3 text-light fab fa-facebook"></i></li>
-            <li><i class="px-3 text-light fab fa-twitter"></i></li>
-            <li><i class="px-3 text-light fab fa-linkedin"></i></li>
-            <li><i class="px-3 text-light fab fa-instagram"></i></li>
-            <li><i class="px-3 text-light fab fa-tumblr"></i></li>
+          <ul class="d-flex justify-content-center mt-4">
+            <li><a href="#"><i class="px-3 text-light fab fa-facebook"></i></a></li>
+            <li><a href="#"><i class="px-3 text-light fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="px-3 text-light fab fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="px-3 text-light fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="px-3 text-light fab fa-tumblr"></i></a></li>
           </ul>
         </div>
       </div>
