--- a/search.html
+++ b/search.html
@@ -19,7 +19,7 @@
   <header class="container-fluid">
     <!-- navbar top -->
     <nav
-      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-2 p-lg-2 w-100">
+      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-2 p-md-1 p-lg-2 w-100">
       <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red mr-2"></i><span
           class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
@@ -58,7 +58,7 @@
             <a href="#">
               <span class="navbar-text text-light">Sam
               </span>
-            </a>fmain-sear
+            </a>
             <a href="#"><i class="fa fa-envelope align-self-center text-light mx-2"></i></a>
             <!-- my picture as user -->
           </div>
@@ -192,14 +192,22 @@
         <div>
           <div class="query-item m-3 p-1 p-lg-2 bg-query-item border">
             <div class="query-img-container bg-query-img-container">
-              <img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item">
+              <a href="#"><img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item"></a>
             </div>
             <div class="query-text-container position-relative pl-3 bg-query-text-container">
-              <h5>Zattix Piano Model CX_100</h5>
+              <a href="#" class="text-dark">
+                <h5>Zattix Piano Model CX_100</h5>
+              </a>
               <div>
-                <p class="m-0 font-weight-bold">850$</p>
-                <p class="mb-0 d-none d-md-block">From India</p>
-                <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                <a href="#" class="text-dark">
+                  <p class="m-0 font-weight-bold">850$</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="mb-0 d-none d-md-block">From India</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                </a>
               </div>
               <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
                 <a href="#">
@@ -214,14 +222,22 @@
           </div>
           <div class="query-item m-3 p-1 p-lg-2 bg-query-item border">
             <div class="query-img-container bg-query-img-container">
-              <img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item">
+              <a href="#"><img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item"></a>
             </div>
             <div class="query-text-container position-relative pl-3 bg-query-text-container">
-              <h5>Zattix Piano Model CX_100</h5>
+              <a href="#" class="text-dark">
+                <h5>Zattix Piano Model CX_100</h5>
+              </a>
               <div>
-                <p class="m-0 font-weight-bold">850$</p>
-                <p class="mb-0 d-none d-md-block">From India</p>
-                <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                <a href="#" class="text-dark">
+                  <p class="m-0 font-weight-bold">850$</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="mb-0 d-none d-md-block">From India</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                </a>
               </div>
               <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
                 <a href="#">
@@ -236,14 +252,22 @@
           </div>
           <div class="query-item m-3 p-1 p-lg-2 bg-query-item border">
             <div class="query-img-container bg-query-img-container">
-              <img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item">
+              <a href="#"><img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item"></a>
             </div>
             <div class="query-text-container position-relative pl-3 bg-query-text-container">
-              <h5>Zattix Piano Model CX_100</h5>
+              <a href="#" class="text-dark">
+                <h5>Zattix Piano Model CX_100</h5>
+              </a>
               <div>
-                <p class="m-0 font-weight-bold">850$</p>
-                <p class="mb-0 d-none d-md-block">From India</p>
-                <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                <a href="#" class="text-dark">
+                  <p class="m-0 font-weight-bold">850$</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="mb-0 d-none d-md-block">From India</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                </a>
               </div>
               <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
                 <a href="#">
@@ -258,14 +282,22 @@
           </div>
           <div class="query-item m-3 p-1 p-lg-2 bg-query-item border">
             <div class="query-img-container bg-query-img-container">
-              <img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item">
+              <a href="#"><img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item"></a>
             </div>
             <div class="query-text-container position-relative pl-3 bg-query-text-container">
-              <h5>Zattix Piano Model CX_100</h5>
+              <a href="#" class="text-dark">
+                <h5>Zattix Piano Model CX_100</h5>
+              </a>
               <div>
-                <p class="m-0 font-weight-bold">850$</p>
-                <p class="mb-0 d-none d-md-block">From India</p>
-                <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                <a href="#" class="text-dark">
+                  <p class="m-0 font-weight-bold">850$</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="mb-0 d-none d-md-block">From India</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                </a>
               </div>
               <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
                 <a href="#">
@@ -280,14 +312,22 @@
           </div>
           <div class="query-item m-3 p-1 p-lg-2 bg-query-item border">
             <div class="query-img-container bg-query-img-container">
-              <img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item">
+              <a href="#"><img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item"></a>
             </div>
             <div class="query-text-container position-relative pl-3 bg-query-text-container">
-              <h5>Zattix Piano Model CX_100</h5>
+              <a href="#" class="text-dark">
+                <h5>Zattix Piano Model CX_100</h5>
+              </a>
               <div>
-                <p class="m-0 font-weight-bold">850$</p>
-                <p class="mb-0 d-none d-md-block">From India</p>
-                <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                <a href="#" class="text-dark">
+                  <p class="m-0 font-weight-bold">850$</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="mb-0 d-none d-md-block">From India</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                </a>
               </div>
               <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
                 <a href="#">
@@ -300,28 +340,7 @@
               </div>
             </div>
           </div>
-          <div class="query-item m-3 p-1 p-lg-2 bg-query-item border">
-            <div class="query-img-container bg-query-img-container">
-              <img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item">
-            </div>
-            <div class="query-text-container position-relative pl-3 bg-query-text-container">
-              <h5>Zattix Piano Model CX_100</h5>
-              <div>
-                <p class="m-0 font-weight-bold">850$</p>
-                <p class="mb-0 d-none d-md-block">From India</p>
-                <p class="d-none d-md-block">A simple but sophisticated piano</p>
-              </div>
-              <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
-                <a href="#">
-                  <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
-                    <path class="add-svg-path"
-                      d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
-                  </svg>
-                </a>
-                <button type="button" class="button mx-3 d-inline">Buy</button>
-              </div>
-            </div>
-          </div>
+
         </div>
 
       </div>
@@ -346,13 +365,9 @@
           <img src="./assets/logo.svg" alt="logo">
           <p class="font-weight-bolder mt-3">ZATTIX</p>
         </div>
-        <p class="px-md-4 d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores
-          nobis
-          voluptatum blanditiis ipsa
-          ut
-          dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
+        <p class="px-md-4 d-none d-md-block">Lorem ipsum dolor sit, ibus perspiciatis iste itaque consequuntur, fugiat
           sed
-          vero nostrum at!</p>
+          vero nostrum at! ibus perspiciatis</p>
       </div>
 
       <!-- categories -->
