carousel:made images and paragraphs in carousel links with a tags

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/main.css">
   <title>Zattix Shopping</title>
   <!-- bootstrap 4.6 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main.css">
   <!-- font awesome icons -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -88,8 +88,10 @@
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <div class="carousel-img">
-                  <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
-                    class="carousel-img">
+                  <a href="">
+                    <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
+                      class="carousel-img">
+                  </a>
                 </div>
                 <span class="sr-only">Photo by <a
                     href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
@@ -98,12 +100,16 @@
 
               </div>
               <div class="carousel-texts px-3">
-                <h2 class="red">PIANO.</h2>
+                <a href="">
+                  <h2 class="red">PIANO.</h2>
+                </a>
                 <p class="quote">“Life is like a piano. What you get out of it depends on how you play it.”
                   <span>-- Tom Lehrer</span>
                 </p>
 
-                <p class="check">Check out our awesome piano collection</p>
+                <a href="">
+                  <p class="check">Check out our awesome piano collection</p>
+                </a>
                 <button type="button" class="button">Explore</button>
               </div>
             </div>
@@ -113,18 +119,24 @@
           <div class="carousel-item text-center p-lg-3">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
-                <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
-                  class="carousel-img">
+                <a href="">
+                  <img src="./assets/violins/william-recinos-qtYhAQnIwSE-unsplash.jpg" alt="picture of piano category"
+                    class="carousel-img">
+                </a>
                 <span class="sr-only">Photo by louis hansel</span>
 
               </div>
               <div class="carousel-texts px-3">
-                <h2 class="red">VIOLIN.</h2>
+                <a href="">
+                  <h2 class="red">VIOLIN.</h2>
+                </a>
                 <p class="quote">"When you play a violin piece, you are a storyteller, and you're telling a story"
                   <span>-- Joshua Bell</span>
                 </p>
 
-                <p class="check">Check out our awesome violin collection</p>
+                <a href="">
+                  <p class="check">Check out our awesome violin collection</p>
+                </a>
                 <button type="button" class="button">Explore</button>
               </div>
             </div>
@@ -132,19 +144,23 @@
 
           <!-- slide 3 -->
           <div class="carousel-item text-center p-lg-3">
-            <div class="row row-cols-1 row-cols-2 row-cols-lg-3 justify-content-center">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <img src="./assets/drums/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
                   class="carousel-img">
                 <span class="sr-only">Photo by chris bulilan</span>
               </div>
               <div class="carousel-texts px-3">
-                <h2 class="red">DRUMS.</h2>
+                <a href="">
+                  <h2 class="red">DRUMS.</h2>
+                </a>
                 <p class="quote">“I'm not a singer who plays a bit of drums. I'm a drummer that sings a bit.”
                   <span>-- Phil Collins</span>
                 </p>
 
-                <p class="check"> Check out our awesome drums collection</p>
+                <a href="">
+                  <p class="check"> Check out our awesome drums collection</p>
+                </a>
                 <button type="button" class="button">Explore</button>
               </div>
             </div>
