products heading and paragraphs clickable links by a tags

--- a/index.html
+++ b/index.html
@@ -182,21 +182,26 @@
     <!-- main products section -->
     <section class="container-fluid p-lg-5 bg-light product-section">
       <div class="product-heading">
-        <h2 class="font-weight-bold text-center border-bottom m-3">Piano</h2>
+        <a href="#">
+          <h2 class="grey font-weight-bolder text-center border-bottom m-3">Piano</h2>
+        </a>
         <p class="font-weight-bold red">Grand, Upright, Electronic</p>
       </div>
       <div class="product-grid">
-        <div class="product-card position-relative">
+        <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <img src="./assets/piano/piano-1.jpg" class="product-img" alt="piano photo">
-            <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
-            <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            <a href="#"><img src="./assets/piano/piano-1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
           </div>
           <div class="product-card-bottom">
             <div>
-              <p class="pl-3">Lorem ipsum Totam beatae eveniet saepe!</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
+                <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between">
+            <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -210,17 +215,20 @@
 
           </div>
         </div>
-        <div class="product-card position-relative">
+        <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <img src="./assets/piano/piano-2.jpg" class="product-img" alt="piano photo">
-            <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
-            <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            <a href="#"><img src="./assets/piano/piano-2.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
           </div>
           <div class="product-card-bottom">
             <div>
-              <p class="pl-3">Lorem ipsum Totam beatae eveniet saepe!</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
+                <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between">
+            <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -234,17 +242,20 @@
 
           </div>
         </div>
-        <div class="product-card position-relative">
+        <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <img src="./assets/piano/piano-3.jpg" class="product-img" alt="piano photo">
-            <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
-            <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            <a href="#"><img src="./assets/piano/piano-3.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
           </div>
           <div class="product-card-bottom">
             <div>
-              <p class="pl-3">Lorem ipsum Totam beatae eveniet saepe!</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
+                <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between">
+            <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -258,17 +269,20 @@
 
           </div>
         </div>
-        <div class="product-card position-relative">
+        <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <img src="./assets/piano/piano-4.jpg" class="product-img" alt="piano photo">
-            <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
-            <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            <a href="#"><img src="./assets/piano/piano-4.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
           </div>
           <div class="product-card-bottom">
             <div>
-              <p class="pl-3">Lorem ipsum Totam beatae eveniet saepe!</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
+                <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between">
+            <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -282,17 +296,20 @@
 
           </div>
         </div>
-        <div class="product-card position-relative">
+        <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <img src="./assets/piano/piano-5.jpg" class="product-img" alt="piano photo">
-            <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
-            <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            <a href="#"><img src="./assets/piano/piano-5.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
           </div>
           <div class="product-card-bottom">
             <div>
-              <p class="pl-3">Lorem ipsum Totam beatae eveniet saepe!</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
+                <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between">
+            <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -306,17 +323,20 @@
 
           </div>
         </div>
-        <div class="product-card position-relative">
+        <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <img src="./assets/piano/piano-6.jpg" class="product-img" alt="piano photo">
-            <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
-            <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            <a href="#"><img src="./assets/piano/piano-6.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
           </div>
           <div class="product-card-bottom">
             <div>
-              <p class="pl-3">Lorem ipsum Totam beatae eveniet saepe!</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
+                <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between">
+            <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -330,17 +350,20 @@
 
           </div>
         </div>
-        <div class="product-card position-relative">
+        <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <img src="./assets/piano/piano-1.jpg" class="product-img" alt="piano photo">
-            <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
-            <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            <a href="#"><img src="./assets/piano/piano-1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
           </div>
           <div class="product-card-bottom">
             <div>
-              <p class="pl-3">Lorem ipsum Totam beatae eveniet saepe!</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
+                <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between">
+            <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -354,17 +377,20 @@
 
           </div>
         </div>
-        <div class="product-card position-relative">
+        <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <img src="./assets/piano/piano-2.jpg" class="product-img" alt="piano photo">
-            <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
-            <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            <a href="#"><img src="./assets/piano/piano-2.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
           </div>
           <div class="product-card-bottom">
             <div>
-              <p class="pl-3">Lorem ipsum Totam beatae eveniet saepe!</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
+                <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between">
+            <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -378,6 +404,7 @@
 
           </div>
         </div>
+
       </div>
 
       <!-- pagination from bootstrap -->
