--- a/search.html
+++ b/search.html
@@ -196,17 +196,17 @@
             </div>
             <div class="query-text-container position-relative pl-3 bg-query-text-container">
               <a href="#" class="text-dark">
-                <h5>Zattix Piano Model CX_100</h5>
+                <h3 class="red">Zattix Piano Model CX_100</h3>
               </a>
               <div>
                 <a href="#" class="text-dark">
-                  <p class="m-0 font-weight-bold">850$</p>
+                  <p class="m-0 font-weight-bold red">850$</p>
                 </a>
                 <a href="#" class="text-dark">
-                  <p class="mb-0 d-none d-md-block">From India</p>
+                  <p class="mb-0">From India</p>
                 </a>
                 <a href="#" class="text-dark">
-                  <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                  <p class="">A simple but sophisticated piano</p>
                 </a>
               </div>
               <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
@@ -222,21 +222,21 @@
           </div>
           <div class="query-item m-3 p-1 p-lg-2 bg-query-item border">
             <div class="query-img-container bg-query-img-container">
-              <a href="#"><img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item"></a>
+              <a href="#"><img src="./assets/piano/piano-2.jpg" class="query-img" alt="piano query item"></a>
             </div>
             <div class="query-text-container position-relative pl-3 bg-query-text-container">
               <a href="#" class="text-dark">
-                <h5>Zattix Piano Model CX_100</h5>
+                <h3 class="red">Zattix Piano Model CX_100</h3>
               </a>
               <div>
                 <a href="#" class="text-dark">
-                  <p class="m-0 font-weight-bold">850$</p>
+                  <p class="m-0 font-weight-bold red">850$</p>
                 </a>
                 <a href="#" class="text-dark">
-                  <p class="mb-0 d-none d-md-block">From India</p>
+                  <p class="mb-0">From India</p>
                 </a>
                 <a href="#" class="text-dark">
-                  <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                  <p class="">A simple but sophisticated piano</p>
                 </a>
               </div>
               <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
@@ -252,21 +252,21 @@
           </div>
           <div class="query-item m-3 p-1 p-lg-2 bg-query-item border">
             <div class="query-img-container bg-query-img-container">
-              <a href="#"><img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item"></a>
+              <a href="#"><img src="./assets/piano/piano-3.jpg" class="query-img" alt="piano query item"></a>
             </div>
             <div class="query-text-container position-relative pl-3 bg-query-text-container">
               <a href="#" class="text-dark">
-                <h5>Zattix Piano Model CX_100</h5>
+                <h3 class="red">Zattix Piano Model CX_100</h3>
               </a>
               <div>
                 <a href="#" class="text-dark">
-                  <p class="m-0 font-weight-bold">850$</p>
+                  <p class="m-0 font-weight-bold red">850$</p>
                 </a>
                 <a href="#" class="text-dark">
-                  <p class="mb-0 d-none d-md-block">From India</p>
+                  <p class="mb-0">From India</p>
                 </a>
                 <a href="#" class="text-dark">
-                  <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                  <p class="">A simple but sophisticated piano</p>
                 </a>
               </div>
               <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
@@ -282,21 +282,21 @@
           </div>
           <div class="query-item m-3 p-1 p-lg-2 bg-query-item border">
             <div class="query-img-container bg-query-img-container">
-              <a href="#"><img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item"></a>
+              <a href="#"><img src="./assets/piano/piano-4.jpg" class="query-img" alt="piano query item"></a>
             </div>
             <div class="query-text-container position-relative pl-3 bg-query-text-container">
               <a href="#" class="text-dark">
-                <h5>Zattix Piano Model CX_100</h5>
+                <h3 class="red">Zattix Piano Model CX_100</h3>
               </a>
               <div>
                 <a href="#" class="text-dark">
-                  <p class="m-0 font-weight-bold">850$</p>
+                  <p class="m-0 font-weight-bold red">850$</p>
                 </a>
                 <a href="#" class="text-dark">
-                  <p class="mb-0 d-none d-md-block">From India</p>
+                  <p class="mb-0">From India</p>
                 </a>
                 <a href="#" class="text-dark">
-                  <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                  <p class="">A simple but sophisticated piano</p>
                 </a>
               </div>
               <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
@@ -312,21 +312,21 @@
           </div>
           <div class="query-item m-3 p-1 p-lg-2 bg-query-item border">
             <div class="query-img-container bg-query-img-container">
-              <a href="#"><img src="./assets/piano/piano-1.jpg" class="query-img" alt="piano query item"></a>
+              <a href="#"><img src="./assets/piano/piano-5.jpg" class="query-img" alt="piano query item"></a>
             </div>
             <div class="query-text-container position-relative pl-3 bg-query-text-container">
               <a href="#" class="text-dark">
-                <h5>Zattix Piano Model CX_100</h5>
+                <h3 class="red">Zattix Piano Model CX_100</h3>
               </a>
               <div>
                 <a href="#" class="text-dark">
-                  <p class="m-0 font-weight-bold">850$</p>
+                  <p class="m-0 font-weight-bold red">850$</p>
                 </a>
                 <a href="#" class="text-dark">
-                  <p class="mb-0 d-none d-md-block">From India</p>
+                  <p class="mb-0">From India</p>
                 </a>
                 <a href="#" class="text-dark">
-                  <p class="d-none d-md-block">A simple but sophisticated piano</p>
+                  <p class="">A simple but sophisticated piano</p>
                 </a>
               </div>
               <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
@@ -340,7 +340,36 @@
               </div>
             </div>
           </div>
-
+          <div class="query-item m-3 p-1 p-lg-2 bg-query-item border">
+            <div class="query-img-container bg-query-img-container">
+              <a href="#"><img src="./assets/piano/piano-6.jpg" class="query-img" alt="piano query item"></a>
+            </div>
+            <div class="query-text-container position-relative pl-3 bg-query-text-container">
+              <a href="#" class="text-dark">
+                <h3 class="red">Zattix Piano Model CX_100</h3>
+              </a>
+              <div>
+                <a href="#" class="text-dark">
+                  <p class="m-0 font-weight-bold red">850$</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="mb-0">From India</p>
+                </a>
+                <a href="#" class="text-dark">
+                  <p class="">A simple but sophisticated piano</p>
+                </a>
+              </div>
+              <div class="add-svg-container mt-2 mt-md-0 d-flex justify-content-between">
+                <a href="#">
+                  <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
+                    <path class="add-svg-path"
+                      d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
+                  </svg>
+                </a>
+                <button type="button" class="button mx-3 d-inline">Buy</button>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
