linters:webhint fix

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
-                <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
@@ -225,8 +225,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
-                <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
@@ -252,8 +252,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
-                <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
@@ -279,8 +279,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
-                <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
@@ -306,8 +306,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
-                <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
@@ -333,8 +333,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
-                <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
@@ -360,8 +360,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
-                <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
@@ -387,8 +387,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h5>
-                <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-3">
               <a href="#">
@@ -425,8 +425,10 @@
       <!-- about the company -->
       <div class="text-light p-md-4 d-none d-md-block">
         <div class="text-center">
-          <img src="./assets/logo.svg" alt="logo">
-          <p class="font-weight-bolder mt-3">ZATTIX</p>
+          <a href="#"><img src="./assets/logo.svg" alt="logo"></a>
+          <a href="#">
+            <p class="font-weight-bolder mt-3 text-light">ZATTIX</p>
+          </a>
         </div>
         <p class="px-md-4 d-none d-md-block">Lorem ipsum dolor sit, ibus perspiciatis iste itaque consequuntur, fugiat
           sed
