linter:img and li tags moved up for linter order issues

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
       <!-- about the company -->
       <div class="text-light p-md-4 d-none d-md-block">
         <div class="text-center">
-          <a href="#"><img src="./assets/logo.svg" alt="logo"></a>
+          <a href="#"><img src="./assets/logo.svg" alt="logo" class="footer-logo"></a>
           <a href="#">
             <p class="font-weight-bolder mt-3 text-light">ZATTIX</p>
           </a>
