--- a/search.html
+++ b/search.html
@@ -414,14 +414,14 @@
           <h5 class="font-weight-bold red text-center">QUICK LINKS</h5>
           <nav>
             <ul class="d-grid g-c-8 footer-nav-ul">
-              <li class="btn-link text-light">HOME</li>
-              <li class="btn-link text-light">CART</li>
-              <li class="btn-link text-light">MY ACCOUNT</li>
-              <li class="btn-link text-light">ORDERS</li>
-              <li class="btn-link text-light">FAVOURITES</li>
-              <li class="btn-link text-light">CONTACT US</li>
-              <li class="btn-link text-light">FAQ</li>
-              <li class="btn-link text-light">LICENSE</li>
+              <li class="btn-link text-light quick-links">HOME</li>
+              <li class="btn-link text-light quick-links">CART</li>
+              <li class="btn-link text-light quick-links">MY ACCOUNT</li>
+              <li class="btn-link text-light quick-links">ORDERS</li>
+              <li class="btn-link text-light quick-links">FAVOURITES</li>
+              <li class="btn-link text-light quick-links">CONTACT US</li>
+              <li class="btn-link text-light quick-links">FAQ</li>
+              <li class="btn-link text-light quick-links">LICENSE</li>
             </ul>
           </nav>
         </div>
